# odex

./: CMakeLists.txt  odex.cmake
dependencies/: README.md
dependencies/matplotlib-cpp/: README.md  matplotlibcpp.h
examples/: CMakeLists.txt  README.txt
examples/KdV/: CMakeLists.txt  KdV.cpp
examples/LorenzAttractor/: CMakeLists.txt  LorenzAttractor.cpp
examples/PluckedString/: CMakeLists.txt  PluckedString.cpp
examples/Transport1D/: CMakeLists.txt  Transport1D.cpp
examples/VanDerPolOscillator/: CMakeLists.txt  VanDerPolOscillator.cpp
examples/ViscidBurgers/: CMakeLists.txt  ViscidBurgers.cpp
examples/WaveEquation/: CMakeLists.txt  WaveEquation.cpp
include/odex/: extrapolation_stepper.hpp  integrate.hpp  make_extrapolation_stepper.hpp
include/odex/detail/: make_extrap_config.hpp  partition.hpp
include/odex/observers/: dense_observer.hpp  null_observer.hpp
include/odex/steppers/: gbs.hpp
include/odex/threading/: pool.hpp  semaphore.hpp  worker.hpp
test/: CMakeLists.txt  Test_ExtrapolationStepper.cpp  Test_Partition.cpp  Test_Threading.cpp  central_difference.hpp  convector.hpp  matrix.hpp
